--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@ document.addEventListener("DOMContentLoaded", () => {
         <td contenteditable="true">${row.name}</td>
         <td contenteditable="true">${row.phone}</td>
       `;
-
       tbody.appendChild(tr);
     });
   }
@@ -125,16 +124,13 @@ document.addEventListener("DOMContentLoaded", () => {
 
   fetchData();
 
-  // زر الطباعة
   document.getElementById("printBtn").addEventListener("click", () => window.print());
 
-  // زر الحفظ (PHP)
   document.getElementById("saveBtn").addEventListener("click", async () => {
     const rows = [];
     document.querySelectorAll("#mainTable tbody tr").forEach(tr => {
       const tds = tr.querySelectorAll("td");
       const select = tr.querySelector("select");
-
       rows.push({
         date: tds[0].textContent.trim(),
         weekday: tr.classList.contains("friday") ? "الجمعة" : "",
@@ -145,16 +141,19 @@ document.addEventListener("DOMContentLoaded", () => {
       });
     });
 
-    const res = await fetch('save.php', {
-      method: 'POST',
-      body: JSON.stringify(rows)
-    });
-
-    const result = await res.json();
-    const msg = document.getElementById("saveMessage");
-    msg.textContent = result.message;
-    msg.style.display = "inline";
-    setTimeout(() => { msg.style.display = "none"; }, 2000);
+    try {
+      const res = await fetch('save.php', {
+        method: 'POST',
+        body: JSON.stringify(rows)
+      });
+      const result = await res.json();
+      const msg = document.getElementById("saveMessage");
+      msg.textContent = result.message;
+      msg.style.display = "inline";
+      setTimeout(() => { msg.style.display = "none"; }, 2000);
+    } catch (err) {
+      alert("حدث خطأ أثناء الحفظ: " + err.message);
+    }
   });
 });
 </script>
